--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="tile">14</div>
         <div class="tile">15</div>
         <div class="tile">16</div>
+        <div id="consoleData"></div>
         <button id="startButton">start</button>
     </div>
 
